--- a/indexer/package.json
+++ b/indexer/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.14.0",
-    "prisma": "^6.14.0"
+    "prisma": "^6.14.0",
+    "viem": "^2.34.0"
   }
 }
